# homework

./: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  HITCRT视觉组代码编写规范考核问卷.docx  README.en.md  README.md  cpp.md  hello.cpp  out.folded  out.perf  perf.data  picnorm  picnorm.c  picnorm.md  process.sh  result.txt  trail.cpp  作业.md  遇到的问题.md
cpp/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp
cpp_5/done/: 5  5.cpp  6  6.cpp
cpp_homework/done/: 1  1.cpp  2  2.cpp  3  3.cpp  4  4.cpp
eigen的文件/第一个题目/: 1.cpp
eigen的文件/那个机器人转圈然后又上坡的/: one
homework/3/: 1
homework/4/: one.cpp
homework/work1/: CMakeLists.txt  one.cpp
homework/work2/: main.cpp
homework/work2/src/: example.h
homework/work3/: CMakeLists.txt  main.cpp
homework/work3/src/: CMakeLists.txt
picnormc/: picnorm
